1.实现Access支持(只支持Access，保留SQL Server需要代码) 2.通过黑盒测试 3.移除类SqlHelper的使用，完全使用类DbHelper替代，原因见 需求分析.md-代码实现

--- a/Warehouse_Desktop/Warehouse/app.config
+++ b/Warehouse_Desktop/Warehouse/app.config
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
-  
-<connectionStrings>
-  <add name="ConnectionString" connectionString="Data Source=DESKTOP-910AJDE,1433\MSSQLSERVER;Initial Catalog=Warehouse;Persist Security Info=True;User ID=sa;Password=631336"/>
-</connectionStrings>
+
+  <connectionStrings>
+    <add name="ConnectionString" connectionString="Data Source=DESKTOP-910AJDE,1433\MSSQLSERVER;Initial Catalog=Warehouse;Persist Security Info=True;User ID=sa;Password=631336"/>
+    <add name="AccessConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Users\Tindoc\Documents\Project\Warehouse\Warehouse_Desktop\Warehouse\AccessDB.mdb"/>
+  </connectionStrings>
 </configuration>
