--- a/Warehouse_Desktop/SqlServer/SqlServer.csproj
+++ b/Warehouse_Desktop/SqlServer/SqlServer.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBHelperAccess.cs" />
     <Compile Include="DbHelperSQL.cs" />
     <Compile Include="DBService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
