--- a/Warehouse_Desktop/Warehouse/Warehouse.csproj
+++ b/Warehouse_Desktop/Warehouse/Warehouse.csproj
@@ -390,6 +390,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AccessDB.mdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="仓.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
